tests/NormalTests/paczka1/fuzzy1/67247144.err
Error in line 7: ZskkB S419 14,6
Error in line 10: 5rsYVEB S419 22,6
Error in line 14: S675 S460 245,8
Error in line 26: U4f A13 73,6
Error in line 27: U4f S419 49,3
Error in line 32: ZskkB S460 80,3
Error in line 18: 64r A13 5,1
Error in line 38: 64r A23 24,9
